...
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier
            .testTag("MovieList"),
    ) {
        item(
            span = { GridItemSpan(2) },
        ) {
            SearchBar(
                query = query,
...
